# library_fuzzer

./: FuzzerCrossOver.cpp  FuzzerDriver.cpp  FuzzerExtFunctionsWeak.cpp  FuzzerExtFunctionsWindows.cpp  FuzzerExtraCounters.cpp  FuzzerFork.cpp  FuzzerIOWindows.cpp  FuzzerMain.cpp  FuzzerTracePC.cpp  FuzzerUtil.cpp  FuzzerUtilFuchsia.cpp  FuzzerUtilLinux.cpp  FuzzerUtilWindows.cpp  README.md  build.sh
client/: Cargo.toml  build.rs
client/protos/: grpc_scheduler.proto
client/src/: config.rs  lib.rs  parse.rs  schedule.rs
client/src/engine/: libfuzzer_c.rs  libfuzzer_csharp.rs  libfuzzer_go.rs  libfuzzer_java.rs  libfuzzer_rust.rs  mod.rs
client/src/grpc/: grpc_scheduler.rs
demo/: exec.sh  first_fuzzer.cc  vulnerable_functions.h
libfuzzer/: FuzzerDataFlowTrace.cpp  FuzzerExtFunctionsDlsym.cpp  FuzzerExtraCountersDarwin.cpp  FuzzerExtraCountersWindows.cpp  FuzzerIO.cpp  FuzzerIOPosix.cpp  FuzzerInterceptors.cpp  FuzzerLoop.cpp  FuzzerMerge.cpp  FuzzerMutate.cpp  FuzzerSHA1.cpp  FuzzerUtilDarwin.cpp  FuzzerUtilPosix.cpp
